fix date format and dark mode issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  body, :root {
     color: #213547;
     background-color: #ffffff;
   }
